# rm-optimizer

./: README.md  doc.md  pyproject.toml
configs/: config.yaml
configs/data/: preference.yaml
configs/experiment/: optimizer_comparison.yaml
configs/hardware/: h100.yaml
configs/model/: deberta.yaml  llama.yaml
configs/optimizer/: adam.yaml  adamw.yaml  lion.yaml  muon.yaml  sgd.yaml
rm_optimizer/: __init__.py
rm_optimizer/core/: __init__.py  base.py  data_loader.py  datasets.py  reward_model.py
rm_optimizer/data_efficiency/: __init__.py  active_learning.py  margin_analysis.py
rm_optimizer/interfaces/: __init__.py  cli.py
rm_optimizer/landscape/: __init__.py  hessian.py  optimizer_comparison.py  visualization.py
rm_optimizer/rl_coupling/: __init__.py  ensemble.py  policy_simulation.py  rl_readiness.py
rm_optimizer/training/: __init__.py  callbacks.py  lightning_module.py
tests/: README.md  conftest.py  test_core.py
